[gd_scene load_steps=5 format=3 uid="uid://l0kojvcxbfky"]

[ext_resource type="Script" path="res://Scripts/Development/map_editor.gd" id="1_y7q6u"]
[ext_resource type="Shortcut" uid="uid://fuvss5hfg4q2" path="res://Resources/Shortcuts/go_back.tres" id="3_a1hl2"]
[ext_resource type="Texture2D" uid="uid://boa1b3papyx4r" path="res://Art/world_map/elven_city.png" id="3_jrkaq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l3dvo"]
bg_color = Color(0, 0.670588, 0.67451, 0.588235)

[node name="MapEditor" type="CanvasLayer" node_paths=PackedStringArray("map_file_name_input")]
process_mode = 3
script = ExtResource("1_y7q6u")
map_file_name_input = NodePath("mapFileName")

[node name="mapFileName" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 70)
offset_left = 112.0
offset_top = 999.0
offset_right = 1849.0
offset_bottom = 1069.0
text = "editor_test_map"

[node name="LMenuContainer" type="VBoxContainer" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 5.0
offset_top = 243.0
offset_right = 330.0
offset_bottom = 492.0
theme_override_constants/separation = 20

[node name="NewWorldMap" type="Button" parent="LMenuContainer"]
layout_mode = 2
text = "New World Map"

[node name="NewBattleMap" type="Button" parent="LMenuContainer"]
layout_mode = 2
text = "New Battle Map"

[node name="SaveMap" type="Button" parent="LMenuContainer"]
layout_mode = 2
text = "Save Map
"

[node name="RMenuContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -325.0
offset_top = 243.0
offset_bottom = 375.0
grow_horizontal = 0
theme_override_constants/separation = 20

[node name="AddRow" type="Button" parent="RMenuContainer"]
layout_mode = 2
text = "Add Row -
"

[node name="AddColumn" type="Button" parent="RMenuContainer"]
layout_mode = 2
text = "Add Column |
"

[node name="TopBar" type="PanelContainer" parent="."]
offset_left = 3.0
offset_top = 3.0
offset_right = 1919.0
offset_bottom = 186.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_l3dvo")

[node name="MarginContainer" type="MarginContainer" parent="TopBar"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TopBar/MarginContainer"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="TopBar/MarginContainer/VBoxContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="TilesPickerBox" type="HBoxContainer" parent="TopBar/MarginContainer/VBoxContainer/Scroll"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="Example1" type="TextureButton" parent="TopBar/MarginContainer/VBoxContainer/Scroll/TilesPickerBox"]
custom_minimum_size = Vector2(130, 160)
layout_mode = 2
texture_normal = ExtResource("3_jrkaq")
ignore_texture_size = true
stretch_mode = 4

[node name="Example2" type="TextureButton" parent="TopBar/MarginContainer/VBoxContainer/Scroll/TilesPickerBox"]
custom_minimum_size = Vector2(130, 160)
layout_mode = 2
texture_normal = ExtResource("3_jrkaq")
ignore_texture_size = true
stretch_mode = 4

[node name="Example3" type="TextureButton" parent="TopBar/MarginContainer/VBoxContainer/Scroll/TilesPickerBox"]
custom_minimum_size = Vector2(130, 160)
layout_mode = 2
texture_normal = ExtResource("3_jrkaq")
ignore_texture_size = true
stretch_mode = 4

[node name="TileNameContainer" type="HBoxContainer" parent="TopBar/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TopBar/MarginContainer/VBoxContainer/TileNameContainer"]
layout_mode = 2
text = "Selected tile: "

[node name="TileNameLabel" type="Label" parent="TopBar/MarginContainer/VBoxContainer/TileNameContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.072
anchor_top = 0.81
anchor_right = 0.072
anchor_bottom = 0.81
offset_left = -17.24
offset_top = -20.8
offset_right = 871.76
offset_bottom = 27.2
text = "Editor"

[node name="OpenButton" type="Button" parent="."]
offset_left = 8.0
offset_top = 996.0
offset_right = 101.0
offset_bottom = 1065.0
text = "üìÅ"

[node name="BackButton" type="Button" parent="."]
offset_left = 9.0
offset_top = 878.0
offset_right = 55.0
offset_bottom = 941.0
shortcut = ExtResource("3_a1hl2")
text = "‚óÄ"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(900, 900)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres")

[connection signal="pressed" from="LMenuContainer/NewWorldMap" to="." method="_on_new_world_map_pressed"]
[connection signal="pressed" from="LMenuContainer/NewBattleMap" to="." method="_on_new_battle_map_pressed"]
[connection signal="pressed" from="LMenuContainer/SaveMap" to="." method="_on_save_map_pressed"]
[connection signal="pressed" from="RMenuContainer/AddRow" to="." method="_on_add_row_pressed"]
[connection signal="pressed" from="RMenuContainer/AddColumn" to="." method="_on_add_column_pressed"]
[connection signal="pressed" from="OpenButton" to="." method="_on_open_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
